--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -27,3 +27,11 @@ jobs:
         run: |
           k3d cluster create
         shell: bash
+
+      - name: Create k3d cluster
+        run: |
+          curl -LO https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl
+          chmod +x kubectl
+          ./kubectl get nodes
+        shell: bash
+        
