--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -28,7 +28,7 @@ jobs:
           k3d cluster create
         shell: bash
 
-      - name: Create k3d cluster
+      - name: Kubernetes get nodes
         run: |
           curl -LO https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl
           chmod +x kubectl
