Show cluster info.

--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -28,10 +28,11 @@ jobs:
           k3d cluster create
         shell: bash
 
-      - name: Kubernetes get nodes
+      - name: Kubernetes get cluster info
         run: |
           curl -LO https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl
           chmod +x kubectl
-          ./kubectl get nodes
+          kubectl config use-context k3d-k3s-default
+          kubectl cluster-info
         shell: bash
         
