--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           curl -LO https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl
           chmod +x kubectl
-          kubectl config use-context k3d-k3s-default
-          kubectl cluster-info
+          ./kubectl config use-context k3d-k3s-default
+          ./kubectl cluster-info
         shell: bash
         
