--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -33,6 +33,6 @@ jobs:
           curl -LO https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl
           chmod +x kubectl
           ./kubectl config use-context k3d-k3s-default
-          ./kubectl cluster-info
+          ./kubectl cluster-info -s host.k3d.internal
         shell: bash
         
