--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -23,16 +23,15 @@ jobs:
           curl -s https://raw.githubusercontent.com/rancher/k3d/main/install.sh | TAG=v4.0.0 bash
         shell: bash
 
-      - name: Create k3d cluster
-        run: |
-          k3d cluster create
-        shell: bash
-
-      - name: Kubernetes get cluster info
-        run: |
-          curl -LO https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl
-          chmod +x kubectl
-          ./kubectl config use-context k3d-k3s-default
-          ./kubectl cluster-info -s host.k3d.internal
-        shell: bash
-        
+      - uses: AbsaOSS/k3d-action@v1.4.0
+        name: "Create Single Cluster"
+        with:
+          cluster-name: "test-cluster-1"
+          args: >-
+            -p "8083:80@agent[0]"
+            -p "8443:443@agent[0]"
+            -p "5053:53/udp@agent[0]"
+            --agents 3
+            --no-lb
+            --image docker.io/rancher/k3s:v1.20.4-k3s1
+            --k3s-server-arg "--no-deploy=traefik,servicelb,metrics-server"
