--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -28,11 +28,11 @@ jobs:
         run: |
           curl -LO https://dl.k8s.io/release/v1.21.0/bin/linux/amd64/kubectl
         shell: bash
-      - name: make executable kubectl 
+      - name: Make executable kubectl 
         run: |
           chmod +x kubectl
         shell: bash
-      - name: kubectl get cluster info
+      - name: Get cluster info from kubectl
         run: |
           ./kubectl cluster-info
         shell: bash
