--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -44,6 +44,24 @@ jobs:
         run: |
           ./kubectl apply -n argo -f https://raw.githubusercontent.com/argoproj/argo-workflows/stable/manifests/quick-start-postgres.yaml
         shell: bash
+      - name: Setup argo-cli
+        run: |
+          # Download the binary
+          curl -sLO https://github.com/argoproj/argo/releases/download/v3.0.7/argo-linux-amd64.gz
 
+          # Unzip
+          gunzip argo-linux-amd64.gz
+
+          # Make binary executable
+          chmod +x argo-linux-amd64
+
+          # Move binary to path
+          mv ./argo-linux-amd64 /usr/local/bin/argo
+
+        shell: bash
+      - name: Test installation
+        run: |
+          argo version
+        shell: bash
 
 
