Wait for completion of job.

--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -66,5 +66,7 @@ jobs:
         run: |
           argo version
         shell: bash
-
-
+      - name: Argo submit job
+        run: |
+          argo submit -n argo --wait --watch https://raw.githubusercontent.com/argoproj/argo-workflows/master/examples/hello-world.yaml
+        shell: bash
