--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -20,13 +20,13 @@ jobs:
         shell: bash
       - name: Create k3d cluster
         run: |
-          k3d cluster create --k3s-server-arg="--flannel-backend=none --no-deploy=traefik" --volume /sys/fs/bpf:/sys/fs/bpf 
+          k3d cluster create --k3s-server-arg="--flannel-backend=none" --volume /sys/fs/bpf:/sys/fs/bpf 
         shell: bash
       - name: Install helm
         run: |
           curl https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3 | bash
         shell: bash
-      - name: Install collium cli
+      - name: Install cillium cli
         run: |
           curl -L --remote-name-all https://github.com/cilium/cilium-cli/releases/latest/download/cilium-linux-amd64.tar.gz{,.sha256sum}
           sha256sum --check cilium-linux-amd64.tar.gz.sha256sum
