--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           cilium install
           cilium status --wait
+          cilium connectivity test
         shell: bash
       - name: Curl get kubectl
         run: |
