--- a/argo-dag.yml
+++ b/argo-dag.yml
@@ -11,7 +11,7 @@ spec:
       - name: message
     container:
       image: fedora:34
-      command: [echo, "{{inputs.parameters.message}}"]
+      command: [echo, "{{inputs.parameters.message}}", "&& sleep 10"]
   - name: diamond
     dag:
       tasks:
