--- a/argo-dag.yml
+++ b/argo-dag.yml
@@ -10,7 +10,7 @@ spec:
       parameters:
       - name: message
     container:
-      image: argoexec:dev-docker
+      image: fedora:34
       command: [echo, "{{inputs.parameters.message}}"]
   - name: diamond
     dag:
