--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -52,6 +52,10 @@ jobs:
         run: |
           kubectl apply -n argo --wait=true -f https://raw.githubusercontent.com/argoproj/argo-workflows/stable/manifests/quick-start-postgres.yaml
         shell: bash
+      - name: Install apt software
+        run: |
+          sudo apt install -y curl
+        shell: bash
       - name: Setup argo-cli
         run: |
           # Download the binary
