--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -18,7 +18,8 @@ jobs:
         shell: bash
       - name: Install apt software
         run: |
-          apt install -y curl
+          apt-get update
+          apt-get install curl -y
         shell: bash
       - name: Install k3d
         run: |
