--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -27,7 +27,12 @@ jobs:
         shell: bash
       - name: Create k3d cluster
         run: |
-          k3d cluster create --agents=3 --kubeconfig-update-default=true --kubeconfig-switch-context=true
+          k3d cluster create --agents=3
+        shell: bash
+      - name: Create k3d context
+        run: |             
+          kubectl config use-context k3d-k3s-default
+          kubectl cluster-info
         shell: bash        
       - name: Curl get kubectl
         run: |
