--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -32,7 +32,7 @@ jobs:
         shell: bash
       - name: Move binary to path
         run: |
-          mv ./kubectl /usr/local/bin/kubectl
+          sudo mv ./kubectl /usr/local/bin/kubectl
         shell: bash        
       - name: Create k3d context
         run: |             
@@ -66,7 +66,7 @@ jobs:
           chmod +x argo-linux-amd64
 
           # Move binary to path
-          mv ./argo-linux-amd64 /usr/local/bin/argo
+          sudo mv ./argo-linux-amd64 /usr/local/bin/argo
         shell: bash
       - name: Test installation
         run: |
