--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -36,7 +36,7 @@ jobs:
         shell: bash        
       - name: Create k3d context
         run: |             
-          k3d kubeconfig merge maroon-steel-cat --kubeconfig-merge-default --kubeconfig-switch-context
+          kubectl config use-context k3d-k3s-default
         shell: bash        
       - name: Cluster Info
         run: |             
