--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -87,5 +87,5 @@ jobs:
         shell: bash        
       - name: Argo submit job
         run: |
-          argo submit -n argo argo-dag.yml
+          argo submit -n argo --watch argo-dag.yml
         shell: bash
