Get all the pods with placeholder.

--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -99,3 +99,7 @@ jobs:
           argo get -n argo @latest
           argo logs -n argo @latest
         shell: bash
+      - name: Argo get logs try 2
+        run: |
+          kubectl get pods | grep diamond | xargs -0L1 kubectl logs {}
+        shell: bash
