--- a/quick-start-postgres.yaml
+++ b/quick-start-postgres.yaml
@@ -616,7 +616,7 @@ data:
       secretKeySecret:
         name: my-minio-cred
         key: secretkey
-  containerRuntimeExecutor: docker
+  containerRuntimeExecutor: k8sapi
   containerRuntimeExecutors: |
     - name: k8sapi
       selector:
