--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -78,5 +78,5 @@ jobs:
         shell: bash
       - name: Argo submit job
         run: |
-          argo submit -n argo --watch argo-dag.yml
+          argo submit -n argo --watch argo-echo.yml
         shell: bash
