--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -78,5 +78,9 @@ jobs:
         shell: bash
       - name: Argo submit job
         run: |
-          argo submit -n argo --watch argo-echo.yml
+          argo submit -n argo --watch argo-artifact.yml
         shell: bash
+      - uses: actions/upload-artifact@v2
+        with:
+          name: message
+          path: /tmp/message
