yaml is not yaml.

--- a/.github/workflows/workflow-maroon-steel-cat.yml
+++ b/.github/workflows/workflow-maroon-steel-cat.yml
@@ -48,7 +48,7 @@ jobs:
         shell: bash
       - name: Install argo in k8s
         run: |
-          kubectl apply -n argo --wait=true -f quick-start-postgres.yaml
+          kubectl apply -n argo --wait=true -f quick-start-postgres.yml
         shell: bash
       - name: Setup argo-cli
         run: |
